--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-theme: jekyll-theme-slate
-title: [The title of your site]
-description: [A short description of your site's purpose]
-show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
-google_analytics: [Your Google Analytics tracking ID]
+remote_theme: pages-themes/slate@v0.2.0
+plugins: jekyll-remote-theme # add this line to the plugins list if you already have one
+title: "Andrew Semenov The title of your site"
+description: "Quality Assurance Engineer (Manual / Automation)"
+show_downloads: "true"
+google_analytics: 1
