--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-remote_theme: pages-themes/slate@v0.2.0
-plugins: jekyll-remote-theme # add this line to the plugins list if you already have one
-title: "Andrew Semenov The title of your site"
-description: "Quality Assurance Engineer (Manual / Automation)"
-show_downloads: "true"
-google_analytics: 1
+title: Slate theme
+description: Slate is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-slate
