--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: My name is Andrew Semenov, 
+description: and I am the Quality Assurance Engineer (Manual / Automation). 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
