--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: Welcome to my Portfolio Page,
-description: here I have prepared some automation tests examples.
+description: here I have prepared automation testing examples.
 #description: My name is Andrew Semenov, and I am the Quality Assurance Engineer (Manual / Automation)
 show_downloads: false
 #github:
