--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: Welcome to my Portfolio Page
-description: [Email](andrew.semenov.sas@gmail.com) | [Telegram](https://t.me/andrewsemenovsas) | [Linkedin](https://linkedin.com/in/andrew-semenov-sas) | [Resume / CV](https://drive.google.com/file/d/1_FlaGj-JcFYpTy5ahL5Zzzem0-fhJ3Qz/view)
+#description: [Email](andrew.semenov.sas@gmail.com) | [Telegram](https://t.me/andrewsemenovsas) | [Linkedin](https://linkedin.com/in/andrew-semenov-sas) | [Resume / CV](https://drive.google.com/file/d/1_FlaGj-JcFYpTy5ahL5Zzzem0-fhJ3Qz/view)
 show_downloads: false
