--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 theme: jekyll-theme-slate
-title: <h1 style="color: #f2f2f2">Quality Assurance Engineer (Manual / Automation)</h1>
-description:  <a href="mailto:andrew.semenov.sas@gmail.com">Send me e-mail</a> <span> | </span> 
-              <a href="https://t.me/andrewsemenovsas">Telegram</a> <span> | </span> 
-              <a href="https://linkedin.com/in/andrew-semenov-sas">Linkedin</a> <span> | </span> 
-              <a href="https://drive.google.com/file/d/1_FlaGj-JcFYpTy5ahL5Zzzem0-fhJ3Qz/view">Resume / CV</a> 
+title: <h1 style="color: #fff">Quality Assurance Engineer (Manual / Automation)</h1>
+description:  <a href="mailto:andrew.semenov.sas@gmail.com">Send me e-mail</a> <span> | </span> <a href="https://t.me/andrewsemenovsas">Telegram</a> <span> | </span> <a href="https://linkedin.com/in/andrew-semenov-sas">Linkedin</a> <span> | </span> <a href="https://drive.google.com/file/d/1_FlaGj-JcFYpTy5ahL5Zzzem0-fhJ3Qz/view">Resume / CV</a> 
 show_downloads: false
