--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: <h1 style="color: white">Quality Assurance Engineer (Manual / Automation)</h1>
+title: <h1 style="color:#fff;">Quality Assurance Engineer (Manual / Automation)</h1>
 description:  <a href="mailto:andrew.semenov.sas@gmail.com">Send me e-mail</a> <span> | </span> 
               <a href="https://t.me/andrewsemenovsas">Telegram</a> <span> | </span> 
               <a href="https://linkedin.com/in/andrew-semenov-sas">Linkedin</a> <span> | </span> 
