--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: <h1 style="color:#fff;">Quality Assurance Engineer (Manual / Automation)</h1>
-description:  <span>Send me e-mail to: </span><a href="mailto:andrew.semenov.sas@gmail.com">andrew.semenov.sas@gmail.com</a><span> | </span> 
+description:  <span>Send me e-mail to </span><a href="mailto:andrew.semenov.sas@gmail.com">andrew.semenov.sas@gmail.com</a><span> | </span> 
               <a href="https://t.me/andrewsemenovsas">Telegram</a> <span> | </span> 
               <a href="https://linkedin.com/in/andrew-semenov-sas">Linkedin</a> <span> | </span> 
               <a href="https://drive.google.com/file/d/1_FlaGj-JcFYpTy5ahL5Zzzem0-fhJ3Qz/view">Resume / CV</a> 
