--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: <h2 style="color:#fff;">Quality Assurance Engineer (Manual / Automation)</h2>
+title: <h2 style="color:#fff; background: none;">Quality Assurance Engineer (Manual / Automation)</h2>
 description:  <a href="mailto:andrew.semenov.sas@gmail.com" style="color:#fff;">andrew.semenov.sas@gmail.com</a><span> | </span> 
               <a href="https://t.me/andrewsemenovsas" style="color:#fff;">Telegram</a> <span> | </span> 
               <a href="https://linkedin.com/in/andrew-semenov-sas" style="color:#fff;">Linkedin</a> <span> | </span> 
